--- a/l3kernel/l3basics.dtx
+++ b/l3kernel/l3basics.dtx
@@ -802,7 +802,7 @@
 %   of the result.
 % \end{function}
 %
-% \section{Analysing control sequence names}
+% \section{Analysing control sequences}
 %
 % \begin{function}[EXP, added = 2018-04-06]{\cs_split_function:N}
 %   \begin{syntax}
@@ -817,6 +817,70 @@
 %   does not include the escape character, and both the \meta{name} and
 %   \meta{signature} are made up of tokens with category code $12$
 %   (other).
+% \end{function}
+%
+% The next three functions decompose \TeX{} macros into their
+% constituent parts: if the \meta{token} passed is not a macro then no
+% decomposition can occur. In the latter case, all three functions leave
+% \cs{scan_stop:} in the input stream.
+%
+% \begin{function}[EXP, added = 2019-02-27]{\cs_prefix_spec:N}
+%   \begin{syntax}
+%     \cs{cs_prefix_spec:N} \meta{token}
+%   \end{syntax}
+%   If the \meta{token} is a macro, this function leaves the applicable
+%   \TeX{} prefixes in input stream as a string of tokens of category
+%   code $12$ (with spaces having category code $10$). Thus for example
+%   \begin{verbatim}
+%     \cs_set:Npn \next:nn #1#2 { x #1~y #2 }
+%     \cs_prefix_spec:N \next:nn
+%   \end{verbatim}
+%   leaves |\long| in the input stream. If the \meta{token} is
+%   not a macro then \cs{scan_stop:} is left in the input stream.
+%   \begin{texnote}
+%     The prefix can be empty, |\long|, |\protected| or
+%     |\protected\long| with backslash replaced by the current escape
+%     character.
+%   \end{texnote}
+% \end{function}
+%
+% \begin{function}[EXP, added = 2019-02-27]{\cs_argument_spec:N}
+%   \begin{syntax}
+%     \cs{cs_argument_spec:N} \meta{token}
+%   \end{syntax}
+%   If the \meta{token} is a macro, this function leaves the primitive
+%   \TeX{} argument specification in input stream as a string of
+%   character tokens of category code $12$ (with spaces having category
+%   code $10$). Thus for example
+%   \begin{verbatim}
+%     \cs_set:Npn \next:nn #1#2 { x #1 y #2 }
+%     \cs_argument_spec:N \next:nn
+%   \end{verbatim}
+%   leaves |#1#2| in the input stream. If the \meta{token} is
+%   not a macro then \cs{scan_stop:} is left in the input stream.
+%   \begin{texnote}
+%     If the argument specification contains the string |->|, then the
+%     function produces incorrect results.
+%   \end{texnote}
+% \end{function}
+%
+% \begin{function}[EXP, added = 2019-02-27]{\cs_replacement_spec:N}
+%   \begin{syntax}
+%     \cs{cs_replacement_spec:N} \meta{token}
+%   \end{syntax}
+%   If the \meta{token} is a macro, this function leaves the replacement
+%   text in input stream as a string of character tokens of category
+%   code $12$ (with spaces having category code $10$). Thus for example
+%   \begin{verbatim}
+%     \cs_set:Npn \next:nn #1#2 { x #1~y #2 }
+%     \cs_replacement_spec:N \next:nn
+%   \end{verbatim}
+%   leaves \verb*|x#1 y#2| in the input stream. If the \meta{token} is
+%   not a macro then \cs{scan_stop:} is left in the input stream.
+%   \begin{texnote}
+%     If the argument specification contains the string |->|, then the
+%     function produces incorrect results.
+%   \end{texnote}
 % \end{function}
 %
 % \section{Using or removing tokens and arguments}
@@ -3468,6 +3532,60 @@
     #1 { \token_to_str:N #2 = \cs_meaning:N #2 }
   }
 %    \end{macrocode}
+% \end{macro}
+%
+% \subsection{Decomposing a macro definition}
+%
+% \begin{macro}{\cs_prefix_spec:N}
+% \begin{macro}{\cs_argument_spec:N}
+% \begin{macro}{\cs_replacement_spec:N}
+% \begin{macro}{\@@_prefix_arg_replacement:wN}
+%   We sometimes want to test if a control sequence can be expanded to
+%   reveal a hidden value. However, we cannot just expand the macro
+%   blindly as it may have arguments and none might be
+%   present. Therefore we define these functions to pick either the
+%   prefix(es), the argument specification, or the replacement text from
+%   a macro. All of this information is returned as characters with
+%   catcode~$12$. If the token in question isn't a macro, the token
+%   \cs{scan_stop:} is returned instead.
+%    \begin{macrocode}
+\use:x
+  {
+    \exp_not:n { \cs_new:Npn \@@_prefix_arg_replacement:wN #1 }
+    \tl_to_str:n { macro : } \exp_not:n { #2 -> #3 \q_stop #4 }
+  }
+  { #4 {#1} {#2} {#3} }
+\cs_new:Npn \cs_prefix_spec:N #1
+  {
+    \token_if_macro:NTF #1
+      {
+        \exp_after:wN \@@_prefix_arg_replacement:wN
+          \token_to_meaning:N #1 \q_stop \use_i:nnn
+      }
+      { \scan_stop: }
+  }
+\cs_new:Npn \cs_argument_spec:N #1
+  {
+    \token_if_macro:NTF #1
+      {
+        \exp_after:wN \@@_prefix_arg_replacement:wN
+          \token_to_meaning:N #1 \q_stop \use_ii:nnn
+      }
+      { \scan_stop: }
+  }
+\cs_new:Npn \cs_replacement_spec:N #1
+  {
+    \token_if_macro:NTF #1
+      {
+        \exp_after:wN \@@_prefix_arg_replacement:wN
+          \token_to_meaning:N #1 \q_stop \use_iii:nnn
+      }
+      { \scan_stop: }
+  }
+%    \end{macrocode}
+% \end{macro}
+% \end{macro}
+% \end{macro}
 % \end{macro}
 %
 % \subsection{Doing nothing functions}
