--- a/l3kernel/l3keys.dtx
+++ b/l3kernel/l3keys.dtx
@@ -2706,7 +2706,7 @@
           {
             \exp_args:Nnf \msg_show_item_unbraced:nn { code }
               {
-                \exp_args:Nc \token_get_replacement_spec:N
+                \exp_args:Nc \cs_replacement_spec:N
                   {
                     \c_@@_code_root_tl
                     \@@_trim_spaces:n { #2 / #3 }
