Change \bool_case to \bool_case_true/false

--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -634,9 +634,10 @@
 %   conversely: sets it to the inverse of its current value.
 % \end{function}
 %
-% \begin{function}[added = 2019-02-10, EXP, noTF]{\bool_case:n}
+% \begin{function}[added = 2019-02-10, EXP, noTF]
+%   {\bool_case_true:n, \bool_case_false:n}
 %   \begin{syntax}
-%     \cs{bool_case:nTF} \\
+%     \cs{bool_case_true:nTF} \\
 %     ~~|{| \\
 %     ~~~~\Arg{boolexpr case_1} \Arg{code case_1} \\
 %     ~~~~\Arg{boolexpr case_2} \Arg{code case_2} \\
@@ -646,17 +647,17 @@
 %     ~~\Arg{true code}
 %     ~~\Arg{false code}
 %   \end{syntax}
-%   This function evaluates in turn each of the
-%   \meta{boolean expression cases}. If it is true then the
-%   associated \meta{code} is left in the input stream
-%   and other cases are discarded. If any of the
-%   cases is true, the \meta{true code} is also inserted into the
-%   input stream (after the code for the appropriate case), while if none
-%   match then the \meta{false code} is inserted. The function
-%   \cs{bool_case:n}, which does nothing if there is no match, is also
-%   available. For example
+%   Evaluates in turn each of the \meta{boolean expression cases} until
+%   the first one that evaluates to \texttt{true} or to \texttt{false},
+%   for \cs{bool_case_true:n} and \cs{bool_case_false:n}, respectively.
+%   The \meta{code} associated to this first case is left in the input
+%   stream, followed by the \meta{true code}, and other cases are
+%   discarded.  If none of the cases match then only the \meta{false
+%   code} is inserted. The functions \cs{bool_case_true:n} and
+%   \cs{bool_case_false:n}, which do nothing if there is no match, are
+%   also available. For example
 %   \begin{verbatim}
-%     \bool_case:nF
+%     \bool_case_true:nF
 %       {
 %         { \dim_compare_p:n { \l__mypkg_wd_dim <= 10pt } }
 %             { Fits }
@@ -2554,24 +2555,44 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[EXP, noTF]{\bool_case:n}
-% \begin{macro}{\@@_case:nTF}
-% \begin{macro}{\@@_case:w, \@@_case_end:nw}
+% \begin{macro}[EXP, noTF]{\bool_case_true:n, \bool_case_false:n}
+% \begin{macro}{\@@_case:NnTF}
+% \begin{macro}{\@@_case_true:w, \@@_case_false:w, \@@_case_end:nw}
 %   For boolean cases the overall idea is the same as for
-%   \cs{tl_case:nn(TF)} as described in \pkg{l3tl}, but with one fewer
-%   argument to track.
+%   \cs{tl_case:nn(TF)} as described in \pkg{l3tl}.
 %    \begin{macrocode}
-\cs_new:Npn \bool_case:nTF { \exp:w \@@_case:nTF }
-\cs_new:Npn \bool_case:nT #1#2 { \exp:w \@@_case:nTF {#1} {#2} { } }
-\cs_new:Npn \bool_case:nF #1 { \exp:w \@@_case:nTF {#1} { } }
-\cs_new:Npn \bool_case:n #1 { \exp:w \@@_case:nTF {#1} { } { } }
-\cs_new:Npn \@@_case:nTF #1#2#3
-  { \@@_case:w #1 \c_true_bool { } \q_mark {#2} \q_mark {#3} \q_stop }
-\cs_new:Npn \@@_case:w #1#2
+\cs_new:Npn \bool_case_true:nTF
+  { \exp:w \@@_case:NnTF \c_true_bool }
+\cs_new:Npn \bool_case_true:nT #1#2
+  { \exp:w \@@_case:NnTF \c_true_bool {#1} {#2} { } }
+\cs_new:Npn \bool_case_true:nF #1
+  { \exp:w \@@_case:NnTF \c_true_bool {#1} { } }
+\cs_new:Npn \bool_case_true:n #1
+  { \exp:w \@@_case:NnTF \c_true_bool {#1} { } { } }
+\cs_new:Npn \bool_case_false:nTF
+  { \exp:w \@@_case:NnTF \c_false_bool }
+\cs_new:Npn \bool_case_false:nT #1#2
+  { \exp:w \@@_case:NnTF \c_false_bool {#1} {#2} { } }
+\cs_new:Npn \bool_case_false:nF #1
+  { \exp:w \@@_case:NnTF \c_false_bool {#1} { } }
+\cs_new:Npn \bool_case_false:n #1
+  { \exp:w \@@_case:NnTF \c_false_bool {#1} { } { } }
+\cs_new:Npn \@@_case:NnTF #1#2#3#4
+  {
+    \bool_if:NTF #1 \@@_case_true:w \@@_case_false:w
+    #2 #1 { } \q_mark {#3} \q_mark {#4} \q_stop
+  }
+\cs_new:Npn \@@_case_true:w #1#2
   {
     \bool_if:nTF {#1}
       { \@@_case_end:nw {#2} }
-      { \@@_case:w }
+      { \@@_case_true:w }
+  }
+\cs_new:Npn \@@_case_false:w #1#2
+  {
+    \bool_if:nTF {#1}
+      { \@@_case_false:w }
+      { \@@_case_end:nw {#2} }
   }
 \cs_new:Npn \@@_case_end:nw #1#2#3 \q_mark #4#5 \q_stop
   { \exp_end: #1 #4 }
