--- a/l3kernel/l3fp-convert.dtx
+++ b/l3kernel/l3fp-convert.dtx
@@ -592,26 +592,19 @@
   {
     \tl_if_empty:nF {#1}
       {
-        \@@_expand:n
+        \exp_last_unbraced:Ne \use_ii:nn
           {
-            { \use_ii:nn }
             \@@_array_to_clist_loop:Nw #1 { ? \prg_break: } ;
             \prg_break_point:
           }
       }
   }
-\cs_new:Npx \@@_array_to_clist_loop:Nw #1#2;
+\cs_new:Npn \@@_array_to_clist_loop:Nw #1#2;
   {
-    \exp_not:N \use_none:n #1
-    \exp_not:N \exp_after:wN
-                 {
-    \exp_not:N     \exp_after:wN ,
-    \exp_not:N     \exp_after:wN \c_space_tl
-    \exp_not:N     \exp:w
-    \exp_not:N     \exp_end_continue_f:w
-    \exp_not:N     \@@_to_tl_dispatch:w #1 #2 ;
-                 }
-    \exp_not:N \@@_array_to_clist_loop:Nw
+    \use_none:n #1
+    , ~
+    \exp_not:f { \@@_to_tl_dispatch:w #1 #2 ; }
+    \@@_array_to_clist_loop:Nw
   }
 %    \end{macrocode}
 % \end{macro}
