--- a/xpackages/xor/xo-page.dtx
+++ b/xpackages/xor/xo-page.dtx
@@ -1,7 +1,7 @@
 % \iffalse
 %% File xo-page.dtx (C) Copyright 1999-2000 Frank Mittelbach, David Carlisle, Chris Rowley
 %%                  (C) Copyright 2001,2004-2009 Frank Mittelbach, The LaTeX3 Project
-%%                  (C) Copyright 2010-2012,2014 The LaTeX3 Project
+%%                  (C) Copyright 2010-2012,2014,2019 The LaTeX3 Project
 %%
 %% It may be distributed and/or modified under the conditions of the
 %% LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -292,7 +292,19 @@
     {Only~ finite~ minus~ or~ plus~ parts~ are~ allowed~ for~ this~ key.}
   }
 }
-
+\cs_new_protected:Npn \skip_split_finite_else_action:nnNN
+  {
+     \skip_if_finite:nTF {#1}
+       {
+         #3 = \tex_gluestretch:D #1 \scan_stop:
+         #4 = \tex_glueshrink:D #1 \scan_stop:
+       }
+       {
+         #3 = \c_zero_skip
+         #4 = \c_zero_skip
+         #2
+       }
+  }
 
 
 \DeclareTemplateCode{pagesetup2}{std}{0}{
